--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <footer>
-        <p>Entre em contato: <a href="mailto:email@dominio.com">email@dominio.com</a></p>
+        <p>Entre em contato: <a href="desenvolvedor.leao@gmail.co m">E-mail</a></p>
     </footer>
 </body>
 </html>
