--- a/index.html
+++ b/index.html
@@ -3,29 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
+    <title>Leão Dev-Web</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/leão-favicon30px.ico" type="image/x-icon">
 </head>
-<body>
+<body id="imagemdefundobody">
     <header>
         <h1>Gabriel Leão</h1>
-        <p>Desenvolvedor Front-End</p>
+        <a href="#">Início</a>
+        <a href="#">to pensando</a>
+        <a href="#">to pensando</a>
+        <a href="#">to pensando</a>
     </header>
 
     <section id="sobre">
         <h2>Sobre Mim</h2>
-        <p>Sou um desenvolvedor front-end apaixonado por criar interfaces incríveis e funcionais.</p>
+        <p>Sou um desenvolvedor web júnior com experiência em <strong><abbr title="Linguagem de Marcação de Hipertexto">HTML</abbr>, <abbr title="Folhas de Estilo em Cascata">CSS</abbr> e <abbr title="Linguagem de programação">JavaScript</abbr></strong>, além de conhecimento em SEO e Marketing Digital. Atualmente, estou aprimorando minhas habilidades em Front-end, estudando à noite e buscando complementar minha formação para acelerar meu aprendizado. Também tenho noções em PHP e estou explorando maneiras de expandir minhas competências técnicas.</p><br>
+
+            <p>Além do desenvolvimento web, possuo experiência em SEO e Marketing Digital, o que me permite otimizar sites para melhorar o ranqueamento nos motores de busca e criar estratégias eficazes para atrair tráfego qualificado. Tenho grande interesse na área de economia e investimentos e estou construindo uma página no Instagram para compartilhar conteúdos relevantes, engajar meu público e expandir meu alcance.</p><br>
+            
+            <p>Constantemente evoluir e me destacar no mercado, por isso estou investindo na construção do meu portfólio no GitHub, destacando meus projetos e habilidades. Tenho um olhar estratégico para o digital e estou sempre em busca de novas oportunidades tanto no desenvolvimento web quanto no crescimento de projetos online.</p>
     </section>
 
     <section id="projetos">
-        <h2>Meus Projetos</h2>
+        <h2>Meus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMe ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus ProjetosMeus Projetosv</h2>
         <div class="projeto">
-            <h3>Projeto 1</h3>
-            <p>Descrição do projeto. O que você fez, as tecnologias usadas, etc.</p>
+            <h3>ProjetoProjetoProjetoProetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetoProjetovvvvv 1</h3>
+
+            <p>Descrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDes fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etc.</p>
         </div>
         <div class="projeto">
-            <h3>Projeto 2</h3>
-            <p>Descrição do projeto. O que você fez, as tecnologias usadas, etc.</p>
+            <h3>Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projo 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2Projeto 2</h3>
+
+            <p>Descrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescriçãocDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcDescrição do projeto. O que você fez, as tecnologias usadas, etcv.</p>
         </div>
     </section>
 
